--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
                 <div class="container">
                     <div class="row w-100 side-menu-inner-content">
                         <div class="col-12 d-flex justify-content-center align-items-center">
-                            <a href="index.html.html" class="navbar-brand"><img src="design-agency/img/logo-white.png" alt="logo"></a>
+                            <a href="index.html" class="navbar-brand"><img src="design-agency/img/logo-white.png" alt="logo"></a>
                         </div>
                         <div class="col-12 col-lg-8">
                             <nav class="side-nav w-100">
                                 <ul class="navbar-nav">
                                     <li class="nav-item">
-                                        <a class="nav-link scroll" href="#home">Home</a>
+                                        <a class="nav-link scroll" href="#home">Главная</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link scroll" href="#feature-sec">About</a>
+                                        <a class="nav-link scroll" href="#feature-sec">О Нас</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link scroll" href="#portfolio-sec">Work</a>
@@ -104,7 +104,7 @@
                             <div class="side-footer text-white w-100">
                                 <div class="menu-company-details">
                                     <span>+1 631 123 4567</span>
-                                    <span>email@website.com</span>
+                                    <span>noreply@crystalsea.ru</span>
                                 </div>
                                 <ul class="social-icons-simple">
                                     <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fab fa-facebook-f"></i> </a> </li>
@@ -112,7 +112,7 @@
                                     <li><a class="youtube-text-hvr" href="javascript:void(0)"><i class="fab fa-youtube"></i> </a> </li>
                                     <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fab fa-instagram"></i> </a> </li>
                                 </ul>
-                                <p class="text-white">&copy; 2020 MegaOne. Made With Love by Themesindustry</p>
+                                <a class="text-white" href="https://madstack.ru">&copy; 2020 MegaOne. Made With Love by MadStack</a>
                             </div>
                         </div>
                     </div>
@@ -132,13 +132,14 @@
                     <div class="container">
                         <div class="detail-text">
                             <div class="inner-content position-relative text-center" data-depth="0.05">
-                                <h4 class="heading">Design.<span>Revolution</span></h4>
+                                <h4 class="heading">CrystalSea<span><a href="index.html" class="navbar-brand"><img src="design-agency/img/logo-white-small.png" alt="logo"></a></span>
+
+                                </h4>
                                 <div class="main-ring">
                                     <div class="slider-ring"></div>
                                 </div>
                             </div>
                         </div>
-                        <a href="https://vimeo.com/3024219" data-fancybox="" class="slider-play-btn link"><span><i class="las la-play"></i></span> Play Video</a>
                     </div>
                 </div>
                 <div class="slider-object1"><img src="design-agency/img/slider-object1.png"></div>
@@ -149,10 +150,10 @@
                     <div class="col-12 bg-yellow height-50 d-flex align-items-center slider-right-box">
                         <div class="container-fluid">
                             <div class="detail-text text-right ml-auto mr-4">
-                                <span class="sub-heading">Simple & Easy</span>
-                                <h4 class="heading">Digital Marketing</h4>
+                                <span class="sub-heading">Быстро & Профессионально</span>
+                                <h4 class="heading">Обслуживание Офисных Аквариумов</h4>
                                 <p class="text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. </p>
-                                <a class="btn white-trans-btn rounded-pill white-trans-btn-yellow-hvr">Get Started Now
+                                <a class="btn white-trans-btn rounded-pill white-trans-btn-yellow-hvr">Заказать
                             <span></span><span></span><span></span><span></span>
                             </a>
                             </div>
@@ -164,10 +165,10 @@
                     <div class="col-12 bg-green height-50 d-flex align-items-center slider-right-box">
                         <div class="container-fluid">
                             <div class="detail-text text-left mr-auto ml-4">
-                                <span class="sub-heading">Simple & Easy</span>
-                                <h4 class="heading">Creative Websites</h4>
+                                <span class="sub-heading">Легко & Просто</span>
+                                <h4 class="heading">Обслуживание Домашних Аквариумов</h4>
                                 <p class="text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. </p>
-                                <a class="btn white-trans-btn rounded-pill white-trans-btn-green-hvr">Get Started Now
+                                <a class="btn white-trans-btn rounded-pill white-trans-btn-green-hvr">Заказать
                                 <span></span><span></span><span></span><span></span>
                             </a>
                             </div>
@@ -623,12 +624,12 @@
                                         <i class="fas fa-quote-right"></i>
                                     </div>
                                     <p class="text">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae egestas mi, vel dapibus diam. Mauris malesuada, nisl non rutrum commodo, sem magna laoreet tellus, eu euismod dolor enim et mi. In at tempor purus.
+                                        Приятные впечатления от работы, чувствуется знания и опыт, а главное- не равнодушное отношение. Предложили помощь в интерьере аквариума. Рыбки остались очень довольны! Цена и качество понравились, поэтому заключили долговременный договор. Рекомендую!
                                     </p>
                                     <div class="img-holder">
                                         <img src="design-agency/img/test1.jpg">
                                     </div>
-                                    <h4 class="user-name">Sara Williams</h4>
+                                    <h4 class="user-name">Елена Сапаева</h4>
                                 </div>
                                 <div class="item text-center">
                                     <div class="icon-holder">
@@ -647,10 +648,11 @@
                     </div>
                     <div class="col-12 col-md-10 offset-md-1 col-lg-5 offset-lg-0 order-1 order-lg-2 offset-lg-1 d-flex justify-content-center align-items-center text-center text-lg-left">
                         <div class="testimonial-details wow fadeInLeft">
-                            <h4 class="heading">Happy <span>Customers</span></h4>
+                            <h4 class="heading">Отзывы <span>Клиентов</span></h4>
                             <p class="text">
-                                Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy.
+                                Наши довольные клиенты - наша лучшая рекомендация!
                             </p>
+                            <a class="btn blue-btn btn-hvr btn-hvr-green rounded-pill" href="https://uslugi.yandex.ru/profile/IlyasA-1319399" target="_blank">Оставить Отзыв<span></span><span></span><span></span><span></span></a>
                         </div>
                     </div>
                 </div>
