--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                                         <a class="nav-link scroll" href="#feature-sec">О Нас</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link scroll" href="#portfolio-sec">Work</a>
+                                        <a class="nav-link scroll" href="#portfolio-sec">Портфолио</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link scroll" href="#pricing-sec">Pricing</a>
+                                        <a class="nav-link scroll" href="#pricing-sec">Цены</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link scroll" href="#contact-sec">Contact</a>
+                                        <a class="nav-link scroll" href="#contact-sec">Контакты</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -152,7 +152,7 @@
                             <div class="detail-text text-right ml-auto mr-4">
                                 <span class="sub-heading">Быстро & Профессионально</span>
                                 <h4 class="heading">Обслуживание Офисных Аквариумов</h4>
-                                <p class="text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. </p>
+                                <p class="text">Обслуживание аквариумов в офисе от Наших специалистов – это гарантия создания и поддержания максимально благоприятных условий для каждого живого организма Вашего подводного мира.</p>
                                 <a class="btn white-trans-btn rounded-pill white-trans-btn-yellow-hvr">Заказать
                             <span></span><span></span><span></span><span></span>
                             </a>
@@ -167,7 +167,7 @@
                             <div class="detail-text text-left mr-auto ml-4">
                                 <span class="sub-heading">Легко & Просто</span>
                                 <h4 class="heading">Обслуживание Домашних Аквариумов</h4>
-                                <p class="text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. </p>
+                                <p class="text">Вы можете заняться уборкой самостоятельно, потратив на мытьё аквариума много времени и сил, или пригласить специалиста, который наведёт в Вашем подводном мире чистоту и порядок.</p>
                                 <a class="btn white-trans-btn rounded-pill white-trans-btn-green-hvr">Заказать
                                 <span></span><span></span><span></span><span></span>
                             </a>
@@ -190,8 +190,8 @@
                 <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-12 text-center">
                     <div class="text">
                         <div class="home-text text-black">
-                            <h4 class="heading">We are Digital Agency</h4>
-                            <p class="text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. </p>
+                            <h4 class="heading">CrystalSea.</h4>
+                            <p class="text">Обслоуживаем аквариумы в Москве и Подмосковье вот уже 15 лет!</p>
                         </div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@
                             <i class="lni lni-bulb"></i>
                         </div>
                         <div class="card-body">
-                            <p class="card-text sub-heading text-black">We have some creative ideas for you.</p>
+                            <p class="card-text sub-heading text-black">Креативный подход в оформлении аквариумов.</p>
                         </div>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                             <i class="lni lni-briefcase color-green"></i>
                         </div>
                         <div class="card-body">
-                            <p class="card-text sub-heading text-black">Your business is our top priority.</p>
+                            <p class="card-text sub-heading text-black">Деловой подход и ответственность в работе.</p>
                         </div>
                     </div>
 
@@ -227,7 +227,7 @@
                             <i class="lni lni-heart"></i>
                         </div>
                         <div class="card-body">
-                            <p class="card-text sub-heading text-black">We love our valued customers.</p>
+                            <p class="card-text sub-heading text-black">Заботимся о Вашем аквариуме, как о своём.</p>
                         </div>
                     </div>
 
@@ -235,7 +235,7 @@
             </div>
             <div class="row">
                 <div class="col-12 padding-top-half text-center">
-                    <a href="#" class="btn blue-btn btn-hvr btn-hvr-yellow rounded-pill">Start Your Project
+                    <a href="#contact-sec" class="btn blue-btn btn-hvr btn-hvr-yellow rounded-pill scroll">Наши Контакты
                     <span></span><span></span><span></span><span></span>
                 </a>
                 </div>
@@ -251,9 +251,9 @@
                 <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0 text-left p-0 text-center text-lg-left">
                     <div class="stats-text wow slideInLeft">
                         <div class="home-text text-black">
-                            <span class="sub-heading">Let us show you some stats</span>
-                            <h4 class="heading mt-3 mb-4">We have done great stuff over the past few years.</h4>
-                            <p class="text mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected .</p>
+                            <span class="sub-heading">Подробнее о Нас</span>
+                            <h4 class="heading mt-3 mb-4">Мы работаем на рынке обслуживания аквариумов более 15-ти лет!</h4>
+                            <p class="text mb-3">Мы ценим каждого клиента и стараемся максимально возможно помочь каждому Клиенту с его аквариумом.</p>
                         </div>
                     </div>
                 </div>
@@ -273,8 +273,8 @@
                                     <i class="fas fa-users color-green"></i>
                                 </div>
                                 <div class="stats-box-text ml-4">
-                                    <h1 class="numbering">500+</h1>
-                                    <p class="stat-sub-heading">Happy Clients</p>
+                                    <h1 class="numbering">100+</h1>
+                                    <p class="stat-sub-heading">Довольных клиентов</p>
                                 </div>
                             </div>
                         </div>
@@ -285,8 +285,8 @@
                                     <i class="fas fa-list color-blue"></i>
                                 </div>
                                 <div class="stats-box-text ml-4">
-                                    <h1 class="numbering">10740+</h1>
-                                    <p class="stat-sub-heading">Lines of Code</p>
+                                    <h1 class="numbering">1740+</h1>
+                                    <p class="stat-sub-heading">Рыбок не остались без дома!</p>
                                 </div>
                             </div>
                         </div>
@@ -297,8 +297,8 @@
                                     <i class="fas fa-check color-yellow"></i>
                                 </div>
                                 <div class="stats-box-text ml-4">
-                                    <h1 class="numbering">200+</h1>
-                                    <p class="stat-sub-heading">Project Completed</p>
+                                    <h1 class="numbering">40+</h1>
+                                    <p class="stat-sub-heading">Аквариумов запущено с 0</p>
                                 </div>
                             </div>
                         </div>
@@ -310,7 +310,7 @@
     <!--Stats sec End-->
 
     <!--Team sec Start-->
-    <section id="team" class="team padding-top padding-bottom">
+    <!-- <section id="team" class="team padding-top padding-bottom">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-10 col-lg-6 offset-lg-3 offset-md-1 text-center">
@@ -383,7 +383,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--Team sec End-->
 
     <!--Portfolio section start-->
@@ -391,11 +391,11 @@
         <div class="container">
             <div class="row portfolio-heading-area text-center text-lg-left">
                 <div class="col-6 col-md-10 offset-md-1 col-lg-5 offset-lg-0">
-                    <h4 class="heading wow fadeInLeft">Latest & <span>Creative Work</span></h4>
+                    <h4 class="heading wow fadeInLeft">Наши <span>Последние Работы</span></h4>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
                     <p class="text wow fadeInRight">
-                        Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. Lorem Ipsum has been the industry’s standard dummy.
+                        Ниже представлены наши последние работы связанные с оформлением аквариумов.
                     </p>
                 </div>
             </div>
@@ -491,9 +491,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1 pricing-heading-area text-center">
-                    <h4 class="heading">Web Design Packages</h4>
+                    <h4 class="heading">Наши Расценки</h4>
                     <p class="text">
-                        Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry’s standard dummy. Lorem Ipsum has been the industry’s standard dummy.
+
                     </p>
                 </div>
             </div>
@@ -503,18 +503,19 @@
                         <div class="pricing-box-header position-relative">
                             <div class="pricing-header-overlay"></div>
                             <div class="header-content">
-                                <h4 class="pricing-price color-green">4.99</h4>
-                                <i class="lni lni-dollar dollar"></i>
-                                <p class="sub-text">Monthly Billing</p>
+                                <h4 class="pricing-price color-green">1700</h4>
+                                <i class="fas fa-ruble-sign"></i>
+                                <p class="sub-text">Разовое обслуживание</p>
                             </div>
                         </div>
                         <div class="pricing-box-detail position-relative">
                             <div class="pricing-detail-overlay"></div>
                             <ul>
-                                <li>Full access</li>
-                                <li>Unlimited Bandwidth</li>
-                                <li>Email Accounts</li>
-                                <li>4 Free Forks Every Months</li>
+                                <li>Цена указана для 100л</li>
+                                <li>+ 600 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
+                                <li>Подмена воды</li>
+                                <li>Консультация по аквариуму</li>
+                                <li>Цена на "Море" + 20%</li>
                             </ul>
                         </div>
                     </div>
@@ -524,18 +525,19 @@
                         <div class="pricing-box-header position-relative">
                             <div class="pricing-header-overlay"></div>
                             <div class="header-content">
-                                <h4 class="pricing-price color-yellow">11.95</h4>
-                                <i class="lni lni-dollar dollar"></i>
-                                <p class="sub-text">Quarterly Billing</p>
+                                <h4 class="pricing-price color-yellow">3100</h4>
+                                <i class="fas fa-ruble-sign"></i>
+                                <p class="sub-text">2х Разовое Обслуживание</p>
                             </div>
                         </div>
                         <div class="pricing-box-detail position-relative">
                             <div class="pricing-detail-overlay"></div>
                             <ul>
-                                <li>Full access</li>
-                                <li>Unlimited Bandwidth</li>
-                                <li>Email Accounts</li>
-                                <li>4 Free Forks Every Months</li>
+                                <li>Цена указана для 100л</li>
+                                <li>+ 500 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
+                                <li>Подмена воды</li>
+                                <li>Консультация по аквариуму</li>
+                                <li>Цена на "Море" + 20%</li>
                             </ul>
                         </div>
                     </div>
@@ -545,18 +547,19 @@
                         <div class="pricing-box-header position-relative">
                             <div class="pricing-header-overlay"></div>
                             <div class="header-content">
-                                <h4 class="pricing-price color-blue">25.99</h4>
-                                <i class="lni lni-dollar dollar"></i>
-                                <p class="sub-text">Biannual Billing</p>
+                                <h4 class="pricing-price color-blue">4400</h4>
+                                <i class="fas fa-ruble-sign"></i>
+                                <p class="sub-text">3х Разовое Обслуживание</p>
                             </div>
                         </div>
                         <div class="pricing-box-detail position-relative">
                             <div class="pricing-detail-overlay"></div>
                             <ul>
-                                <li>Full access</li>
-                                <li>Unlimited Bandwidth</li>
-                                <li>Email Accounts</li>
-                                <li>4 Free Forks Every Months</li>
+                                <li>Цена указана для 100л</li>
+                                <li>+ 500 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
+                                <li>Подмена воды</li>
+                                <li>Консультация по аквариуму</li>
+                                <li>Цена на "Море" + 20%</li>
                             </ul>
                         </div>
                     </div>
@@ -566,18 +569,19 @@
                         <div class="pricing-box-header position-relative">
                             <div class="pricing-header-overlay"></div>
                             <div class="header-content">
-                                <h4 class="pricing-price color-green">45.95</h4>
-                                <i class="lni lni-dollar dollar"></i>
-                                <p class="sub-text">Yearly Billing</p>
+                                <h4 class="pricing-price color-green">5600</h4>
+                                <i class="fas fa-ruble-sign"></i>
+                                <p class="sub-text">4х Разовое Обслуживание</p>
                             </div>
                         </div>
                         <div class="pricing-box-detail position-relative">
                             <div class="pricing-detail-overlay"></div>
                             <ul>
-                                <li>Full access</li>
-                                <li>Unlimited Bandwidth</li>
-                                <li>Email Accounts</li>
-                                <li>4 Free Forks Every Months</li>
+                                <li>Цена указана для 100л</li>
+                                <li>+ 400 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
+                                <li>Подмена воды</li>
+                                <li>Консультация по аквариуму</li>
+                                <li>Цена на "Море" + 20%</li>
                             </ul>
                         </div>
                     </div>
