--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <span class="sub-heading">Быстро & Профессионально</span>
                                 <h4 class="heading">Обслуживание Офисных Аквариумов</h4>
                                 <p class="text">Обслуживание аквариумов в офисе от Наших специалистов – это гарантия создания и поддержания максимально благоприятных условий для каждого живого организма Вашего подводного мира.</p>
-                                <a class="btn white-trans-btn rounded-pill white-trans-btn-yellow-hvr">Заказать
+                                <a class="btn white-trans-btn rounded-pill white-trans-btn-yellow-hvr scroll" href="#contact-sec">Заказать
                             <span></span><span></span><span></span><span></span>
                             </a>
                             </div>
@@ -168,7 +168,7 @@
                                 <span class="sub-heading">Легко & Просто</span>
                                 <h4 class="heading">Обслуживание Домашних Аквариумов</h4>
                                 <p class="text">Вы можете заняться уборкой самостоятельно, потратив на мытьё аквариума много времени и сил, или пригласить специалиста, который наведёт в Вашем подводном мире чистоту и порядок.</p>
-                                <a class="btn white-trans-btn rounded-pill white-trans-btn-green-hvr">Заказать
+                                <a class="btn white-trans-btn rounded-pill white-trans-btn-green-hvr scroll" href="#contact-sec">Заказать
                                 <span></span><span></span><span></span><span></span>
                             </a>
                             </div>
@@ -493,7 +493,7 @@
                 <div class="col-12 col-md-10 offset-md-1 pricing-heading-area text-center">
                     <h4 class="heading">Наши Расценки</h4>
                     <p class="text">
-
+                        Цена указана для стандартных аквариумов. Точная стоимость определяется индивидуально исходя из объема работ.
                     </p>
                 </div>
             </div>
@@ -515,6 +515,8 @@
                                 <li>+ 600 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
+                                <li>Чистка аквариума</li>
+
                                 <li>Цена на "Море" + 20%</li>
                             </ul>
                         </div>
@@ -537,6 +539,8 @@
                                 <li>+ 500 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
+                                <li>Чистка аквариума</li>
+
                                 <li>Цена на "Море" + 20%</li>
                             </ul>
                         </div>
@@ -559,6 +563,8 @@
                                 <li>+ 500 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
+                                <li>Чистка аквариума</li>
+                                <li>Корм в подарок</li>
                                 <li>Цена на "Море" + 20%</li>
                             </ul>
                         </div>
@@ -581,6 +587,9 @@
                                 <li>+ 400 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
+                                <li>Чистка аквариума</li>
+                                <li>Чистка декораций</li>
+                                <li>Корм в подарок</li>
                                 <li>Цена на "Море" + 20%</li>
                             </ul>
                         </div>
@@ -592,22 +601,28 @@
     <!--Pricing section end-->
 
     <!--Blog section start-->
-    <section id="blog-sec" class="blog-sec padding-top padding-bottom bg-light-gray">
+    <section id="blog-sec" class="blog-sec padding-top-half padding-bottom-half bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
                     <div class="blog-img wow fadeInLeft">
                         <img src="design-agency/img/blog-mokeup.png">
-                        <img src="design-agency/img/blog-mokup-img.png" id="mokeup-img">
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0 text-center text-lg-left">
                     <div class="blog-detail wow fadeInRight">
-                        <h4 class="heading">Design Blogs</h4>
-                        <p class="text">Lorem ipsum is simply dummy text of the printing and typesetting. Lorem Ipsum has been the industry.</p>
-                        <a class="btn blue-btn btn-hvr btn-hvr-green rounded-pill" href="design-agency/standalone.html">Learn More
+                        <h4 class="heading">Акции!</h4>
+                        <p class="text">Узнайте о наших акциях по телефону или в любом удобном для Вас мессенджере!</p>
+                        <a class="btn blue-btn btn-hvr btn-hvr-green rounded-pill" href="design-agency/standalone.html">Позвонить
                         <span></span><span></span><span></span><span></span>
                     </a>
+                        <div class="footer-social text-center text-lg-left ">
+                            <ul class="list-unstyled">
+                                <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
+                                <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
+                                <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -746,12 +761,9 @@
                 <div class="col-12 col-lg-6 text-center text-lg-left order-2 order-lg-1">
                     <div class="footer-social text-center text-lg-left ">
                         <ul class="list-unstyled">
-                            <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-facebook-f"></i></a></li>
-                            <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-twitter"></i></a></li>
-                            <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-google-plus-g"></i></a></li>
-                            <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-linkedin-in"></i></a></li>
-                            <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-instagram"></i></a></li>
-                            <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-pinterest-p"></i></a></li>
+                            <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
+                            <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
+                            <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
                         </ul>
                     </div>
                     <p class="company-about fadeIn mt-3 mt-lg-5">© 2020 MegaOne. Made With Love By <a href="javascript:void(0);">Themesindustry</a>
