--- a/index.html
+++ b/index.html
@@ -107,12 +107,11 @@
                                     <span>noreply@crystalsea.ru</span>
                                 </div>
                                 <ul class="social-icons-simple">
-                                    <li><a class="facebook-text-hvr" href="javascript:void(0)"><i class="fab fa-facebook-f"></i> </a> </li>
-                                    <li><a class="twitter-text-hvr" href="javascript:void(0)"><i class="fab fa-twitter"></i> </a> </li>
-                                    <li><a class="youtube-text-hvr" href="javascript:void(0)"><i class="fab fa-youtube"></i> </a> </li>
-                                    <li><a class="instagram-text-hvr" href="javascript:void(0)"><i class="fab fa-instagram"></i> </a> </li>
+                                    <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-telegram"></i></a></li>
+                                    <li><a class="wow fadeInDown" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-whatsapp"></i></a></li>
+                                    <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
                                 </ul>
-                                <a class="text-white" href="https://madstack.ru">&copy; 2020 MegaOne. Made With Love by MadStack</a>
+                                <a class="text-white" href="https://madstack.ru">&copy; 2021 Made With Love by MadStack</a>
                             </div>
                         </div>
                     </div>
@@ -204,7 +203,7 @@
                             <i class="lni lni-bulb"></i>
                         </div>
                         <div class="card-body">
-                            <p class="card-text sub-heading text-black">Креативный подход в оформлении аквариумов.</p>
+                            <p class="card-text sub-heading text-black">Креативные идеи для оформления аквариумов.</p>
                         </div>
                     </div>
                 </div>
@@ -494,6 +493,7 @@
                     <h4 class="heading">Наши Расценки</h4>
                     <p class="text">
                         Цена указана для стандартных аквариумов. Точная стоимость определяется индивидуально исходя из объема работ.
+                        <br/> *Обращаем Ваше внимание что мы так же оказываем услуги по установке и замене оборудования<br/> *Если вы не нашли требуемой услуги в списке, свяжитесь с нами!
                     </p>
                 </div>
             </div>
@@ -512,7 +512,7 @@
                             <div class="pricing-detail-overlay"></div>
                             <ul>
                                 <li>Цена указана для 100л</li>
-                                <li>+ 600 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
+                                <li>+ 500 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
                                 <li>Чистка аквариума</li>
@@ -560,7 +560,7 @@
                             <div class="pricing-detail-overlay"></div>
                             <ul>
                                 <li>Цена указана для 100л</li>
-                                <li>+ 500 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
+                                <li>+ 400 <i class="fas fa-ruble-sign"></i> за каждые 100л</li>
                                 <li>Подмена воды</li>
                                 <li>Консультация по аквариуму</li>
                                 <li>Чистка аквариума</li>
@@ -611,8 +611,8 @@
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0 text-center text-lg-left">
                     <div class="blog-detail wow fadeInRight">
-                        <h4 class="heading">Акции!</h4>
-                        <p class="text">Узнайте о наших акциях по телефону или в любом удобном для Вас мессенджере!</p>
+                        <h4 class="heading">Скидка 10% на первый заказ</h4>
+                        <p class="text">Закажите Сейчас, по телефону или в любом удобном для Вас мессенджере!</p>
                         <a class="btn blue-btn btn-hvr btn-hvr-green rounded-pill" href="design-agency/standalone.html">Позвонить
                         <span></span><span></span><span></span><span></span>
                     </a>
@@ -623,6 +623,7 @@
                                 <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
                             </ul>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -655,12 +656,36 @@
                                         <i class="fas fa-quote-right"></i>
                                     </div>
                                     <p class="text">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae egestas mi, vel dapibus diam. Mauris malesuada, nisl non rutrum commodo, sem magna laoreet tellus, eu euismod dolor enim et mi. In at tempor purus.
+                                        Хотели небольшой аквариум для ребенка в его комнату, обратились в кристал си , ребята помогли с выбором аквариума, все подключили и оформили его, подсказали где лучше купить рыб и декорации, заключили договор на обслуживание.
                                     </p>
                                     <div class="img-holder">
                                         <img src="design-agency/img/test2.jpg">
                                     </div>
-                                    <h4 class="user-name">Julia Miltese</h4>
+                                    <h4 class="user-name">Роман И.</h4>
+                                </div>
+                                <div class="item text-center">
+                                    <div class="icon-holder">
+                                        <i class="fas fa-quote-right"></i>
+                                    </div>
+                                    <p class="text">
+                                        Заказывала разовую чистку аквариума, работник был на месте уже через час. Работа заняла от силы час с небольшим, аквариум 210л. Буду обращаться еще.
+                                    </p>
+                                    <div class="img-holder">
+                                        <img src="design-agency/img/test2.jpg">
+                                    </div>
+                                    <h4 class="user-name">Марина Е.</h4>
+                                </div>
+                                <div class="item text-center">
+                                    <div class="icon-holder">
+                                        <i class="fas fa-quote-right"></i>
+                                    </div>
+                                    <p class="text">
+                                        Сломался светильник в аквариуме, приехал специалист , забрал светильник - через 2 дня привез рабочий обратно. всем доволен.
+                                    </p>
+                                    <div class="img-holder">
+                                        <img src="design-agency/img/test2.jpg">
+                                    </div>
+                                    <h4 class="user-name">Евгений П.</h4>
                                 </div>
                             </div>
                         </div>
@@ -687,22 +712,22 @@
                 <div class="col-12">
                     <div class="sponser-tags owl-carousel owl-theme">
                         <div class="item">
-                            <img src="design-agency/img/brand4.png">
+                            <img src="design-agency/img/brand1.png">
+                        </div>
+                        <div class="item">
+                            <img src="design-agency/img/brand2.png">
+                        </div>
+                        <div class="item">
+                            <img src="design-agency/img/brand3.png">
                         </div>
                         <div class="item">
                             <img src="design-agency/img/brand4.png">
                         </div>
                         <div class="item">
-                            <img src="design-agency/img/brand4.png">
+                            <img src="design-agency/img/brand5.png">
                         </div>
                         <div class="item">
-                            <img src="design-agency/img/brand4.png">
-                        </div>
-                        <div class="item">
-                            <img src="design-agency/img/brand4.png">
-                        </div>
-                        <div class="item">
-                            <img src="design-agency/img/brand4.png">
+                            <img src="design-agency/img/brand6.png">
                         </div>
                     </div>
                 </div>
@@ -716,19 +741,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-7 wow fadeInLeft">
-                    <h4 class="heading text-center text-lg-left">Questions? <span>Let's Get In Touch</span></h4>
+                    <h4 class="heading text-center text-lg-left">Остались вопросы? <span>Звоните!</span></h4>
                     <form class="row contact-form" id="contact-form-data">
                         <div class="col-sm-12" id="result"></div>
                         <div class="col-12 col-md-5">
-                            <input type="text" name="userName" placeholder="Your Name" class="form-control">
-                            <input type="email" name="userEmail" placeholder="Email Address *" class="form-control">
-                            <input type="text" name="userSubject" placeholder="Subject" class="form-control">
+                            <input type="text" name="userName" placeholder="Ваше Имя" class="form-control">
+                            <input type="email" name="userEmail" placeholder="E-mail адрес" class="form-control">
+                            <input type="text" name="userSubject" placeholder="Ваш телефон" class="form-control">
                         </div>
                         <div class="col-12 col-md-7">
-                            <textarea class="form-control" name="userMessage" rows="6">Your Message</textarea>
+                            <textarea class="form-control" name="userMessage" rows="6">Ваше сообщение</textarea>
                         </div>
                         <div class="col-12">
-                            <a href="javascript:void(0);" class="btn green-btn btn-hvr btn-hvr-blue rounded-pill w-100 contact_btn"><i class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i>Send Message
+                            <a href="javascript:void(0);" class="btn green-btn btn-hvr btn-hvr-blue rounded-pill w-100 contact_btn"><i class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i>Отправить Заявку
                             <span></span><span></span><span></span><span></span><span></span>
                         </a>
                         </div>
@@ -742,7 +767,7 @@
                                 <span>+1 631 1234 5678</span>
                                 <span>+1 631 1234 5678</span>
                             </li>
-                            <li><i class="las la-paper-plane email color-green"></i>email@website.com</li>
+                            <li><i class="las la-paper-plane email color-green"></i>noreply@crystalsea.ru</li>
                         </ul>
                     </div>
                     <img src="design-agency/img/contact-background.png" class="contact-background" alt="contact">
@@ -766,7 +791,7 @@
                             <li><a class="wow fadeInUp" href="javascript:void(0);"><i aria-hidden="true" class="fab fa-viber"></i></a></li>
                         </ul>
                     </div>
-                    <p class="company-about fadeIn mt-3 mt-lg-5">© 2020 MegaOne. Made With Love By <a href="javascript:void(0);">Themesindustry</a>
+                    <p class="company-about fadeIn mt-3 mt-lg-5"><a href="https://madstack.ru">&copy; 2021 Made With Love by MadStack</a>
                     </p>
                 </div>
                 <!--Text-->
