--- a/index.html
+++ b/index.html
@@ -403,78 +403,27 @@
                     <div class="portfolio-carousel owl-carousel owl-item">
                         <div class="item">
                             <div class="portfolio-image">
-                                <img src="design-agency/img/p1.jpg">
+                                <img src="design-agency/img/p1.png">
                             </div>
-                            <div class="row no-gutters portfolio-footer padding-top">
-                                <div class="col-4 col-lg-4 d-flex justify-content-center justify-content-lg-end">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">Earphones</h4>
-                                        <p class="text">Client</p>
-                                    </div>
-                                </div>
-                                <div class="col-4 col-lg-4 d-flex justify-content-center">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">Aug 2020</h4>
-                                        <p class="text">Date</p>
-                                    </div>
-                                </div>
-                                <div class="col-4 col-lg-4 d-flex justify-content-center justify-content-lg-start">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">Website Design</h4>
-                                        <p class="text">Services</p>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
                         <div class="item">
                             <div class="portfolio-image">
-                                <img src="design-agency/img/p2.jpg">
+                                <img src="design-agency/img/p2.png">
                             </div>
-                            <div class="row no-gutters portfolio-footer padding-top">
-                                <div class="col-4 col-lg-4 d-flex justify-content-center justify-content-lg-end">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">Laptops</h4>
-                                        <p class="text">Client</p>
-                                    </div>
-                                </div>
-                                <div class="col-4 col-lg-4 d-flex justify-content-center">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">Sep 2020</h4>
-                                        <p class="text">Date</p>
-                                    </div>
-                                </div>
-                                <div class="col-4 col-lg-4 d-flex justify-content-center justify-content-lg-start">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">Website SEO</h4>
-                                        <p class="text">Services</p>
-                                    </div>
-                                </div>
-                            </div>
+
                         </div>
                         <div class="item">
                             <div class="portfolio-image">
-                                <img src="design-agency/img/p3.jpg">
+                                <img src="design-agency/img/p3.png">
                             </div>
-                            <div class="row no-gutters portfolio-footer padding-top">
-                                <div class="col-4 col-lg-4 d-flex justify-content-center justify-content-lg-end">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">Spray Tans</h4>
-                                        <p class="text">Client</p>
-                                    </div>
-                                </div>
-                                <div class="col-4 col-lg-4 d-flex justify-content-center">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">June 2020</h4>
-                                        <p class="text">Date</p>
-                                    </div>
-                                </div>
-                                <div class="col-4 col-lg-4 d-flex justify-content-center justify-content-lg-start">
-                                    <div class="portfolio-mini-detail">
-                                        <h4 class="portfolio-mini-heading">Website SEO</h4>
-                                        <p class="text">Services</p>
-                                    </div>
-                                </div>
+
+                        </div>
+                        <div class="item">
+                            <div class="portfolio-image">
+                                <img src="design-agency/img/p4.png">
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -762,10 +711,8 @@
                 <div class="col-12 col-lg-5 text-center text-lg-left position-relative d-flex align-items-center">
                     <div class="contact-details wow fadeInRight">
                         <ul>
-                            <li><i class="las la-map-marker addr color-blue"></i>123 Park Avenue, New York, United States </li>
                             <li><i class="las la-phone-volume phone color-yellow"></i>
-                                <span>+1 631 1234 5678</span>
-                                <span>+1 631 1234 5678</span>
+                                <span><a>+1 631 1234 5678</a></span>
                             </li>
                             <li><i class="las la-paper-plane email color-green"></i>noreply@crystalsea.ru</li>
                         </ul>
