--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                                         Приятные впечатления от работы, чувствуется знания и опыт, а главное- не равнодушное отношение. Предложили помощь в интерьере аквариума. Рыбки остались очень довольны! Цена и качество понравились, поэтому заключили долговременный договор. Рекомендую!
                                     </p>
                                     <div class="img-holder">
-                                        <img src="design-agency/img/test1.jpg">
+                                        <img src="design-agency/img/test1.png">
                                     </div>
                                     <h4 class="user-name">Елена Сапаева</h4>
                                 </div>
@@ -608,7 +608,7 @@
                                         Хотели небольшой аквариум для ребенка в его комнату, обратились в кристал си , ребята помогли с выбором аквариума, все подключили и оформили его, подсказали где лучше купить рыб и декорации, заключили договор на обслуживание.
                                     </p>
                                     <div class="img-holder">
-                                        <img src="design-agency/img/test2.jpg">
+                                        <img src="design-agency/img/test2.png">
                                     </div>
                                     <h4 class="user-name">Роман И.</h4>
                                 </div>
@@ -620,7 +620,7 @@
                                         Заказывала разовую чистку аквариума, работник был на месте уже через час. Работа заняла от силы час с небольшим, аквариум 210л. Буду обращаться еще.
                                     </p>
                                     <div class="img-holder">
-                                        <img src="design-agency/img/test2.jpg">
+                                        <img src="design-agency/img/test2.png">
                                     </div>
                                     <h4 class="user-name">Марина Е.</h4>
                                 </div>
@@ -632,7 +632,7 @@
                                         Сломался светильник в аквариуме, приехал специалист , забрал светильник - через 2 дня привез рабочий обратно. всем доволен.
                                     </p>
                                     <div class="img-holder">
-                                        <img src="design-agency/img/test2.jpg">
+                                        <img src="design-agency/img/test2.png">
                                     </div>
                                     <h4 class="user-name">Евгений П.</h4>
                                 </div>
