--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                         <div class="col-12 col-md-5">
                             <input type="text" name="userName" placeholder="Ваше Имя" class="form-control">
                             <input type="email" name="userEmail" placeholder="E-mail адрес" class="form-control">
-                            <input type="text" name="userSubject" placeholder="Ваш телефон" class="form-control">
+                            <input type="phone" name="userPhone" placeholder="Ваш телефон" class="form-control">
                         </div>
                         <div class="col-12 col-md-7">
                             <textarea class="form-control" name="userMessage" rows="6">Ваше сообщение</textarea>
