--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
 <head>
     <!-- Meta Tags -->
     <meta charset="utf-8">
+    <meta name="title" content="Crystal Sea - обслуживание домашних и офисных аквариумов">
+    <meta name="description" content="Crystal Sea - обслуживание домашних и офисных аквариумов в Москве, Московской области.">
+    <meta name="keywords" content="обслуживание морских и пресноводных аквариумов в Москве,обслуживание морских и пресноводных аквариумов в Москвской области, почистить аквариум, обслуживание аквариумов, кораллы, заменить кораллы,чистка аквариума вызовчистка аквариума вызов +на дом,почистить дно аквариума, оформление аквариума, оформление аквариума 100 литров, обслуживание аквариумов, обслуживание морских аквариумов, обслуживание аквариумов +в москве, обслуживание аквариумов цена, обслуживание аквариумов спб, специалист +по обслуживанию аквариумов, аквариумист, аквариумисты спб, чистка аквариума, аквариум чистка купить, чистка аквариумов +на дому, чистка дна аквариума, чистка аквариумов +в москве, чистка аквариумов +на дому цена, услуги чистки аквариумов, чистка аквариума вызов +на дом цена, чистка аквариума вызов цена, чистка аквариумов +в офисе, обслуживание пресноводных аквариумов">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="russian">
+    <meta property="og:title" content="Crystal Sea - обслуживание домашних и офисных аквариумов">
+    <meta property="og:site_name" content="Crystal Sea">
+    <meta property="og:url" content="index.html">
+    <meta property="og:description" content="Aqualounge - обслуживание морских и пресноводных аквариумов в Москве, Московской области , Санкт петербурге и Ленинградской области.">
+    <meta property="og:image" content="https://sun9-12.userapi.com/impg/4IzhuegJCmwJtNPmHhU2SL5XSPeQTcIPdb7xLQ/d6E3sMrcbSE.jpg?size=1200x767&quality=96&sign=509ba8671eb89a65f8e260c121507a54&type=album">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!-- Author -->
-    <meta name="author" content="Themes Industry">
-    <!-- description -->
-    <meta name="description" content="MegaOne is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose studio and portfolio HTML5 template with 8 ready home page demos.">
-    <!-- keywords -->
-    <meta name="keywords" content="Creative Startup, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, studio, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, studio, masonry, grid, faq">
+    <meta name="author" content="madstack.ru">
     <!-- Page Title -->
-    <title>Design Agency | MegaOne HTML5 Template</title>
+    <title>Обслуживание Домашних и Офисных Аквариумов в Москве</title>
     <!-- Favicon -->
     <link href="" rel="icon">
     <!-- Bundle -->
@@ -209,7 +223,7 @@
                     <div class="text">
                         <div class="home-text text-black">
                             <h4 class="heading">CrystalSea.</h4>
-                            <p class="text">Обслоуживаем аквариумы в Москве и Подмосковье вот уже 15 лет!</p>
+                            <p class="text">Обслуживаем аквариумы в Москве и Подмосковье вот уже 15 лет!</p>
                         </div>
                     </div>
                 </div>
